--- a/PHCWebApplication/Site.Master
+++ b/PHCWebApplication/Site.Master
@@ -46,19 +46,62 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">PHC Application</a>
                 </div>
+
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li class="dropdown">
+                            <a runat="server" class="dropdown-toggle" data-toggle="dropdown">Master Setting
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="AddTaluk">Add Taluk</a>
+                                </li>
+                                <li>
+                                    <a href="AddPHC">Add PHC</a>
+                                </li>
+                                
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a runat="server" class="dropdown-toggle" data-toggle="dropdown">Master Setting
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="AddLabTests">Add LabTest</a>
+                                </li>
+                                <li>
+                                    <a href="AddDiseases">Add Disease</a>
+                                </li>
+                                <li>
+                                    <a href="AddDrugs">Add Drug</a>
+                                </li>
+                                <li>
+                                    <a href="AddPatientDetails">Add Patient</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="/Code/Filtering/Default.aspx">Clinic</a>
+                        </li>
+
+                        <li>
+                            <a href="/Code/CustomFormatting/Default.aspx">Reports</a>
+                        </li>
+
+                        <li>
+                            <a href="/Testewebform.aspx">testwebform</a>
+                        </li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="~/Account/Register">Register</a></li>
                                 <li><a runat="server" href="~/Account/Login">Log in</a></li>
+                                <li><a runat="server" href="~/Account/Login">My Profile</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
@@ -75,7 +118,6 @@
         </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
-
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
